h1. CHANGELOG

h2. 2.6.10 May 31, 2014

* revise 'rails-omniauth' recipe

h2. 2.6.9 May 29, 2014

* for custom application option with Devise, fixes https://github.com/RailsApps/rails-composer/issues/178
* for Devise, need 'domain_name' even without the email option (contributed by Jimmy Zhang)
* improve menu when 'Contributed applications' is selected

h2. 2.6.8 May 26, 2014

* for Devise, add 'domain_name' to 'secrets.yml' file for tests

h2. 2.6.7 May 26, 2014

* for Devise, set 'config.mailer_sender' in 'config/initializers/devise.rb' file
* for Devise, add 'password_confirmation' to 'config/initializers/filter_parameter_logging.rb' file
* add tests for 'rails_signup_download' app

h2. 2.6.6 May 11, 2014

* change prompts for selection menu

h2. 2.6.5 May 10, 2014

* in 'models' recipe, need to run 'rake db:migrate' immediately after adding migrations

h2. 2.6.4 May 6, 2014

* in 'extras' recipe, remove gems used to assist rails_apps_composer

h2. 2.6.3 May 4, 2014

* no need to set app name in 'config/routes.rb' file for Rails 4.1

h2. 2.6.2 May 4, 2014

* don't include 'domain_name' in 'secrets.yml' file unless email option is selected
* remove temporary rails_apps_pages gem during cleanup phase

h2. 2.6.1 May 4, 2014

* fix error introduced by 'secrets' preference setting
* remove warning about incompatible recipes; add a welcome banner

h2. 2.6.0 May 4, 2014

* no need to set app name in 'config/routes.rb' file for Rails 4.1
* set preferences array of secrets for 'learn-rails' app
* add 'rails-signup-download' example application
* create individual recipes for example apps (and remove 'apps4' recipe)
* use 'rails_apps_pages' gem to set up controllers, views, and routing for example apps
* fix 'domain_name' environment variable in 'secrets.yml' file

h2. 2.5.1 April 26, 2014

* use 'rails_apps_testing' gem to configure RSpec and friends in 'tests4' recipe
* install 'binding_of_caller' gem properly for various Ruby versions

h2. 2.5.0 April 22, 2014
