@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.6.10"
+  VERSION = "2.6.11"
 end
