@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.6.11 June 3, 2014
+
+* for Devise, modify 'config/initializers/filter_parameter_logging.rb' file only for Rails 4.1
+
 h2. 2.6.10 May 31, 2014
 
 * revise 'rails-omniauth' recipe
